--- a/container/public/index.html
+++ b/container/public/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="dev-products"></div>
-    <div id="cart-dev"></div>
+    <div id="my-cart"></div>
   </body>
 </html>
